evaluating on test set in MTL-LLM added

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ LLM_Finetuning/STL_LLM/BEAD_classification
 LLM_Finetuning/STL_LLM/StereoSet_classification
 LLM_Finetuning/MTL_LLM/MTL_Models
 __pycache__
+
+*.png
